[package]
exclude = ["target/"]
name = "scanclient"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "High-performance, observable HTTP client for Santh security scanners"
readme = "README.md"
license = "MIT"
authors = ["Corum Collective LLC <engineering@corumcollective.com>"]
repository = "https://github.com/santhsecurity/scanclient"
keywords = ["http", "security", "scanner", "reqwest"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.4", features = ["limit", "util"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
